<resources>
    <string name="app_name">Le pigeon Nelson</string>
    <string name="action_settings">Préférences</string>
    <string name="action_exit">Quitter</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="listen">Écouter</string>
    <string name="stop_listening">Fin de l\'écoute</string>

    <string name="action_back">Retour</string>
    <string name="add">Ajouter</string>
    <string name="settings_fragment">Préférences</string>
    <string name="edit_server_fragment">Édition du serveur</string>
    <string name="no_GPS_connection">Pas de connexion GPS.</string>
    <string name="server_content_error">Erreur dans le contenu du serveur.</string>
    <string name="server_access_error">Erreur d\'accès au serveur.</string>
    <string name="server_url">Adresse du serveur</string>
    <string name="force_server_properties">Forcer les propriétés du serveur</string>
    <string name="server_name">Nom du serveur</string>
    <string name="server_description">server_description</string>
    <string name="server_encoding">Encodage</string>
    <string name="refresh_messages">Récupérer régulièrement de nouveaux messages</string>
    <string name="channel_name">le pigeon nelson</string>
    <string name="channel_description">Notifications for the pigeon nelson service</string>
    <string name="add_server_fragment">Ajouter un serveur</string>
    <string name="action_reload">Recharger</string>
</resources>